--- a/front/package.json
+++ b/front/package.json
@@ -8,7 +8,9 @@
         "start": "next start",
         "lint": "next lint",
         "test": "vitest",
-        "test:e2e": "playwright test"
+        "test:e2e": "playwright test",
+        "fix:prettier": "prettier --write .",
+        "fix:eslint": "eslint --fix ."
     },
     "dependencies": {
         "@editorjs/editorjs": "^2.28.2",
