--- a/back/api/phpunit.xml.dist
+++ b/back/api/phpunit.xml.dist
@@ -18,8 +18,8 @@
     </php>
 
     <testsuites>
-        <testsuite name="Project Test Suite">
-            <directory>tests</directory>
+        <testsuite name="Challenge ApiPlaftorm">
+            <directory>tests/api</directory>
         </testsuite>
     </testsuites>
 
@@ -33,6 +33,4 @@
         <listener class="Symfony\Bridge\PhpUnit\SymfonyTestsListener" />
     </listeners>
 
-    <extensions>
-    </extensions>
 </phpunit>
