--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.5.0"
+    "react-i18next": "^13.5.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
@@ -34,6 +35,7 @@
     "eslint-config-next": "14.0.4",
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
+    "prettier": "3.1.1",
     "tailwindcss": "^3.3.6",
     "vitest": "^1.0.2"
   }
