--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,6 @@ on:
     branches:
       - main
 
-
 jobs:
   deploy-backend:
     runs-on: ubuntu-latest
@@ -38,15 +37,13 @@ jobs:
             docker-compose.yml
             docker-compose.override.yml
           set: |
-            *.cache-from=type=gha,scope=${{github.ref}}
+            *.cache-from=type=gha,scope=${{ github.ref }}
             *.cache-from=type=gha,scope=refs/heads/main
-            *.cache-to=type=gha,scope=${{github.ref}},mode=max
+            *.cache-to=type=gha,scope=${{ github.ref }},mode=max
 
-      
-
-
-
-
-
-
-
+  deploy-frontend:
+    runs-on: ubuntu-latest
+    needs: [ci-back, ci-front, deploy-backend]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
