--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
         "flowbite": "^2.2.0",
         "flowbite-react": "^0.7.0",
         "i18next": "^23.7.8",
+        "million": "^2.6.4",
         "next": "14.0.4",
         "next-i18next": "^15.1.1",
         "prop-types": "^15.8.1",
