--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,7 @@
         "next-i18next": "^15.2.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
+        "react-charts": "3.0.0-beta.57",
         "react-dom": "^18.2.0",
         "react-i18next": "^14.0.1",
         "react-icons": "^5.0.1"
