--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,9 @@
         "@headlessui/react": "^1.7.18",
         "@heroicons/react": "^2.1.1",
         "axios": "^1.6.5",
+        "chart.js": "^4.4.1",
+        "chartjs-adapter-dayjs-4": "^1.0.4",
+        "dayjs": "^1.11.10",
         "flowbite": "^2.2.1",
         "flowbite-react": "^0.7.2",
         "i18next": "^23.7.18",
@@ -32,7 +35,7 @@
         "next-i18next": "^15.2.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
-        "react-charts": "3.0.0-beta.57",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^14.0.1",
         "react-icons": "^5.0.1"
