--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,9 @@
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.0.18",
         "axios": "^1.6.2",
+        "chart.js": "^4.4.1",
+        "chartjs-adapter-dayjs-4": "^1.0.4",
+        "dayjs": "^1.11.10",
         "flowbite": "^2.2.0",
         "flowbite-react": "^0.7.0",
         "i18next": "^23.7.8",
@@ -32,7 +35,7 @@
         "next-i18next": "^15.1.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
-        "react-charts": "3.0.0-beta.57",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^14.0.0",
         "react-icons": "^4.12.0"
@@ -46,6 +49,7 @@
         "eslint-config-next": "14.0.4",
         "jsdom": "^23.0.1",
         "postcss": "^8.4.32",
+        "postcss-nesting": "^12.0.2",
         "prettier": "^3.1.1",
         "tailwindcss": "^3.3.6",
         "vitest": "^1.0.2"
