--- a/back/pwa/package.json
+++ b/back/pwa/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@api-platform/admin": "^3.4.4",
+    "@api-platform/admin": "^3.4.5",
     "@fontsource/poppins": "^5.0.8",
-    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.17.9",
     "formik": "^2.4.5",
     "isomorphic-unfetch": "^4.0.2",
-    "next": "^14.0.0",
-    "postcss": "^8.4.30",
+    "next": "^14.0.4",
+    "postcss": "^8.4.33",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@tanstack/react-query": "^5.0.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.20",
