--- a/back/pwa/package.json
+++ b/back/pwa/package.json
@@ -9,28 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@api-platform/admin": "^3.4.4",
+    "@api-platform/admin": "^3.4.5",
     "@fontsource/poppins": "^5.0.8",
-    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tanstack/react-query": "^5.17.15",
     "formik": "^2.4.5",
     "isomorphic-unfetch": "^4.0.2",
-    "next": "^14.0.0",
-    "postcss": "^8.4.30",
+    "next": "^14.0.4",
+    "postcss": "^8.4.33",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@tanstack/react-query": "^5.0.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.20",
+    "@babel/core": "^7.23.7",
     "@popperjs/core": "^2.11.8",
-    "@types/node": "^20.6.3",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "^14.0.0",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.2.2"
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "@babel/core": "^7.19.0",
