--- a/.github/workflows/ci-front.yaml
+++ b/.github/workflows/ci-front.yaml
@@ -67,6 +67,7 @@ jobs:
         working-directory: front
     container:
       image: mcr.microsoft.com/playwright:v1.41.0-jammy
+      options: --user 1001
 
     steps:
       - name: Checkout
