--- a/front/package.json
+++ b/front/package.json
@@ -44,6 +44,7 @@
         "eslint-config-next": "14.0.4",
         "jsdom": "^23.2.0",
         "postcss": "^8.4.33",
+        "postcss-nesting": "^12.0.2",
         "prettier": "^3.2.4",
         "tailwindcss": "^3.4.1",
         "vitest": "^1.2.1"
