--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
         "@fullcalendar/timegrid": "^6.1.8",
         "@headlessui/react": "^1.7.17",
         "@heroicons/react": "^2.0.18",
+        "@vercel/speed-insights": "^1.0.8",
         "axios": "^1.6.2",
         "chart.js": "^4.4.1",
         "chartjs-adapter-dayjs-4": "^1.0.4",
