--- a/front/public/site.webmanifest.json
+++ b/front/public/site.webmanifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "",
-    "short_name": "",
+    "name": "coursia",
+    "short_name": "coursia",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
