--- a/front/package.json
+++ b/front/package.json
@@ -34,7 +34,8 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^14.0.1",
-        "react-icons": "^5.0.1"
+        "react-icons": "^5.0.1",
+        "react-modal": "^3.16.1"
     },
     "devDependencies": {
         "@playwright/test": "^1.41.0",
