--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
     "name": "front",
     "version": "0.1.0",
     "private": true,
+    "dev": "next dev --turbo",
     "scripts": {
         "dev": "next dev --turbo",
         "build": "next build",
