--- a/test/.env
+++ b/test/.env
@@ -3,7 +3,7 @@ APP_SECRET=a020f78aaa77ab6b8ff1b982d199b3f2
 
 MAILER_DSN=smtp://mailhog:1025
 
-DATABASE_URL="postgresql://root:root@database:5432/symfony?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://Ossama9:EWxYt01pLcuG@ep-dry-shape-a2t1a5db.eu-central-1.aws.neon.tech/database?sslmode=require"
 DATABASE_VERSION=15
 
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
