--- a/.github/workflows/cd-back.yaml
+++ b/.github/workflows/cd-back.yaml
@@ -8,6 +8,9 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: test
     steps:
       - uses: actions/checkout@v2
 
