--- a/.github/workflows/cd-back.yaml
+++ b/.github/workflows/cd-back.yaml
@@ -8,11 +8,12 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./test
     steps:
       - uses: actions/checkout@v2
+      - name: Exécuter des commandes dans le dossier test
+        run: |
+          echo "Les commandes ici sont exécutées dans le dossier 'test'"
+        working-directory: ./test
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
