--- a/.github/workflows/cd-back.yaml
+++ b/.github/workflows/cd-back.yaml
@@ -41,12 +41,15 @@ jobs:
     needs: build_and_push
     runs-on: ubuntu-latest
     steps:
+
       - name: Setup Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+          version: '>=  363.0.0'
+
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.9.0
         with:
